<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewLessonActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_700"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.AppBar"
            app:popupTheme="@style/Theme.PopupOverlay"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/course_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="13dp"
        android:drawableStart="@drawable/ic_baseline_label_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/color_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <View
        android:id="@+id/color_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@color/blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <EditText
        android:id="@+id/course_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_code_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/course_code"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/color_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_name" />

    <EditText
        android:id="@+id/course_venue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/ic_baseline_edit_location_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/venue"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/color_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_code" />

    <EditText
        android:id="@+id/lecturer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/lecturer"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/color_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_venue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecturer">

        <TextView
            android:id="@+id/start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="6:00"
            android:textSize="35sp"
            app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/start_am_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="AM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/start_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/to"
        app:layout_constraintStart_toEndOf="@+id/start_time_layout"
        app:layout_constraintTop_toBottomOf="@+id/lecturer" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/end_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintStart_toEndOf="@+id/to"
        app:layout_constraintTop_toBottomOf="@+id/lecturer">

        <TextView
            android:id="@+id/end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:text="7:00"
            android:textSize="35sp"
            app:drawableStartCompat="@drawable/ic_baseline_access_time_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/end_am_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="AM"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/end_time" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:drawablePadding="5dp"
        android:text="@string/days"
        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/end_time_layout" />


    <HorizontalScrollView
        android:id="@+id/horizontal_scroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_days">

        <LinearLayout
            android:id="@+id/days_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/mon" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/tue" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/wed" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/thu" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/fri" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/sat" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="days"
                android:text="@string/sun" />
        </LinearLayout>
    </HorizontalScrollView>


    <TextView
        android:id="@+id/rem_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/remind_before"
        app:drawableStartCompat="@drawable/ic_baseline_alarm_on_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rem_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:contentDescription="@string/save_lesson"
        android:focusable="true"
        android:src="@drawable/ic_baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_check_24" />

</androidx.constraintlayout.widget.ConstraintLayout>